--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block content %}
-    <div class="container h-100">
-        <div class="col-7">
-            
+{% block page_header %}
+    <div class="container header-container">
+        <div class="row">
+            <div class="col"></div>            
         </div>
     </div>
 {% endblock %}
