--- a/templates/base.html
+++ b/templates/base.html
@@ -35,46 +35,58 @@
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" 
+          href="{% url 'home' %}">Rare Groove Records</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <form class="d-flex" method="GET" action="">
+              <input class="form-control me-2" type="text" name="q "placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
 
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">              
+              
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
+                  Account
                 </a>
 
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  {% if request.user.is_authenticated %}
+                      {% if request.user.is_superuser %}
+                          <li><a href="" class="dropdown-item">Product Management</a></li>
+                          <li><hr class="dropdown-divider"></li>
+                      {% endif %}
+                      <li><a href="" class="dropdown-item">My Profile</a></li>
+                      <li><a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a></li>
+                  {% else %}
+                      <li><a href="{% url 'account_login' %}" class="dropdown-item">Login</a></li>
+                      <li><hr class="dropdown-divider"></li>                   
+                      <li><a href="{% url 'account_signup' %}" class="dropdown-item">Register</a></li>
+                  {% endif %}                  
                 </ul>
               </li>
-              
+
               <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="#">
+                    <div class="text-center">
+                        <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                        <p class="my-0">
+                            {% if grand_total %}
+                                ${{ grand_total|floatformat:2 }}
+                            {% else %}
+                                $0.00
+                            {% endif %}
+                        </p>
+                    </div>
+                </a>
               </li>
-            </ul>
 
-
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+            </ul>           
 
           </div>
         </div>
