--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     {% endblock %}
     
     {% block corecss %}
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
       <link rel="stylesheet" href="{% static 'css/base.css' %}"> 
     {% endblock %}
 
@@ -22,8 +22,10 @@
     {% endblock %}
     
     {% block corejs %}
-      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+      <script src="https://kit.fontawesome.com/11af3b4277.js" crossorigin="anonymous"></script>
+      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     {% endblock %}
 
     {% block extra_js %}
@@ -36,58 +38,63 @@
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         
         <div class="container-fluid">
-          <a class="navbar-brand" 
-          href="{% url 'home' %}">Rare Groove Records</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-            <form class="d-flex" method="GET" action="">
-              <input class="form-control me-2" type="text" name="q "placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">              
-              
+          <a class="navbar-brand d-none d-lg-block" 
+          href="{% url 'home' %}">Rare Groove<br>Records
+          </a>                   
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">               
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Account
+                  <div class="d-none d-lg-block">Dropdown</div>
                 </a>
-
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  {% if request.user.is_authenticated %}
-                      {% if request.user.is_superuser %}
-                          <li><a href="" class="dropdown-item">Product Management</a></li>
-                          <li><hr class="dropdown-divider"></li>
-                      {% endif %}
-                      <li><a href="" class="dropdown-item">My Profile</a></li>
-                      <li><a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a></li>
-                  {% else %}
-                      <li><a href="{% url 'account_login' %}" class="dropdown-item">Login</a></li>
-                      <li><hr class="dropdown-divider"></li>                   
-                      <li><a href="{% url 'account_signup' %}" class="dropdown-item">Register</a></li>
-                  {% endif %}                  
-                </ul>
-              </li>
+                  <form class="d-flex" method="GET" action="">
+                    <input class="form-control me-2" type="text" name="q "placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                  </form>
+                    </ul>
+                  </li>
+                  
+                  <li class="nav-item dropdown">
+                    
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      <div class="text-center">
+                          <div><i class="fas fa-user fa-lg"></i></div>
+                          <div class="d-none d-lg-block">Account</div>
+                      </div>
+                    </a>
 
-              <li class="nav-item">
-                <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="#">
-                    <div class="text-center">
-                        <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-                        <p class="my-0">
-                            {% if grand_total %}
-                                ${{ grand_total|floatformat:2 }}
-                            {% else %}
-                                $0.00
-                            {% endif %}
-                        </p>
-                    </div>
-                </a>
-              </li>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      {% if request.user.is_authenticated %}
+                          {% if request.user.is_superuser %}
+                              <li><a href="" class="dropdown-item">Product Management</a></li>
+                              <li><hr class="dropdown-divider"></li>
+                          {% endif %}
+                          <li><a href="" class="dropdown-item">My Profile</a></li>
+                          <li><a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a></li>
+                      {% else %}
+                          <li><a href="{% url 'account_login' %}" class="dropdown-item">Login</a></li>
+                          <li><hr class="dropdown-divider"></li>                   
+                          <li><a href="{% url 'account_signup' %}" class="dropdown-item">Register</a></li>
+                      {% endif %}                  
+                    </ul>
+                  </li>
 
-            </ul>           
+                  <li class="nav-item">
+                    <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="#">
+                        <div class="text-center">
+                            <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                            <p class="my-0">
+                                {% if grand_total %}
+                                    ${{ grand_total|floatformat:2 }}
+                                {% else %}
+                                    $0.00
+                                {% endif %}
+                            </p>
+                        </div>
+                    </a>
+                  </li>
+
+                </ul>           
 
           </div>
         </div>
@@ -105,9 +112,7 @@
     {% endblock %}
 
     {% block postloadjs %}
-    {% endblock %}     
-
-    
+    {% endblock %}      
     
   </body>
 </html>
