--- a/static/css/base.css
+++ b/static/css/base.css
@@ -88,6 +88,17 @@ body {
     }
 
     .header-container {
-        padding-top: 164px;
+        padding-top: 200px;
+    }
+}
+
+/* pad the top a bit when navbar is collapsed on mobile */
+@media (max-width: 991px) {
+    .header-container {
+        padding-top: 200px;
+    }
+
+    body {
+        height: calc(100vh - 200px);
     }
 }
