--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -31,8 +31,21 @@
                 <div class="product-details-container mb-5 mt-md-5">
                     <p class="mb-0">{{ product.title }}</p>
                     <p class="mb-1">by {{ product.artist }}</p>
-                    <p class="mb-2">{{ product.format.friendly_format_name }}</p>
                     <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
+                    {% if product.format %}
+                    <p class="small mt-1 mb-0">
+                        <a class="text-muted" href="{% url 'products' %}?format={{ product.format.format }}">
+                            <i class="fas fa-tag mr-1"></i>{{ product.format.friendly_format_name }}
+                        </a>
+                    </p>
+                    {% endif %}
+                    {% if product.category %}
+                    <p class="small mt-1 mb-0">
+                        <a class="text-muted" href="{% url 'products' %}?format={{ product.category }}">
+                            <i class="fas fa-tag mr-1"></i>{{ product.category }}
+                        </a>
+                    </p>
+                    {% endif %}
                     {% if product.rating %}
                         <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
                     {% else %}
