--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+{% load static %}
+
 {% load i18n %}
 <!DOCTYPE html>
 <html>
@@ -8,6 +11,7 @@
     {% block extra_head %}
     {% endblock %}
   </head>
+
   <body>
     {% block body %}
 
@@ -35,6 +39,17 @@
       </ul>
     </div>
     {% block content %}
+      <div class="container header-container">
+        <div class="overlay"></div>
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <div class="allauth-form-inner-content">
+                    {% block inner_content %}
+                    {% endblock %}
+                </div>
+            </div>
+        </div>
+      </div>
     {% endblock %}
     {% endblock %}
     {% block extra_body %}
